# pendulum

./: .gitignore  buffer.py  design_notes.txt  eval_double_inverted_pendulum.py  eval_inverted_pendulum.py  eval_pendulum.py  fork_train_inverted_pendulum.py  fork_train_irl_data.py  main.py  main_mod.py  main_relearning.py  ppo_learning.py  ppo_mod.py  sac.py  sac_new.py  sac_new_train_inverted_pendulum.py  sac_train_inverted_pendulum.py  showcase.py  td3.py  td3_fork.py  td3_fork_double.py  td3_fork_mod.py  tqc.py  tqc_train_inverted_pendulum.py  train_double_inverted_pendulum.py  train_inverted_pendulum.py  train_pendulum.py  train_student_double_inverted_pendulum.py  utils.py  visualize_activation_functions.py
DoublePendulum_CPP/: torch2cpp.py
RPi/: button.py  config.ini  encoder.py  environment.py  main.py  main_2.py  motor.py  precheck.py  rpi_push.py  save_model_to_txt.py  td3_fork.py  utils.py
RPi_CPP/: CMakeLists.txt  agent.cpp  agent.h  charles_notes.txt  config.ini  environment.cpp  environment.h  globals.h  main.cpp
RPi_CPP/models/: fc1_biases.csv  fc1_weights.csv  fc2_biases.csv  fc2_weights.csv  mu_biases.csv  mu_weights.csv  sigma_biases.csv  sigma_weights.csv
assets/: distributions.py
models/: fc1_biases.csv  fc1_weights.csv  fc2_biases.csv  fc2_weights.csv  ln1_biases.csv  ln1_weights.csv  ln2_biases.csv  ln2_weights.csv  mu_biases.csv  mu_weights.csv
notes/: RASPBERRY_PI_SETUPS.txt  design_notes.txt  double_inverted_pendulum_notes.txt  general_notes.txt  google colab notes.txt  mujoco_py_installation_notes.txt
temp/: SARSA.py  data.txt  (+17 more)
(+305 files in other folders)
